{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GameMaker",
            "id": "ce618d60-28f5-4c26-a0f8-c184714a0834",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "04b81fba-6b57-4d70-a2ce-50c5d8aaa2fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "5163a7c7-18da-4b30-b9ae-8e48c27dca75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f2906a7d-3e7c-44e9-9972-d2df9585010f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2bd9d79-dd56-46fb-82f5-8b8dadc413d8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b88c2ee3-681e-4a41-8e98-d303bdc0a464",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9de3e04e-48fd-4a45-adae-fe5708035828",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}